make settings work on phones

--- a/friction/templates/viewer.html
+++ b/friction/templates/viewer.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/static/lib/photoswipe/default-skin/default-skin.css"/>
     <link rel="stylesheet" href="/static/friction.css"/>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
     <script src="/static/lib/photoswipe/photoswipe.js"></script>
     <script src="/static/lib/photoswipe/photoswipe-ui-default.js"></script>
   </head>
