handle bad searches
closes #3

--- a/friction/templates/viewer.html
+++ b/friction/templates/viewer.html
@@ -13,6 +13,7 @@
     <script src="/static/lib/photoswipe/photoswipe-ui-default.js"></script>
   </head>
   <body>
+    <p id="messenger">loading&hellip;</p>
     <div
       id="wrapper"
       class="
