--- a/friction/static/friction.css
+++ b/friction/static/friction.css
@@ -37,7 +37,8 @@ body {
 }
 
 #settings, #settings-toggle {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.9);
+  border: 2px solid rgba(0, 0, 0, 0.5);
   border-radius: .4em;
   z-index: 5000;
   padding: 0.5em;
@@ -58,4 +59,13 @@ body {
 p {
   padding: .25em 0;
   margin: 0;
+}
+
+#messenger {
+  position: absolute;
+  font-size: 1.5em;
+  top: 20vh;
+  width: 80vw;
+  left: 10vw;
+  text-align: center;
 }
