--- a/friction/static/friction.css
+++ b/friction/static/friction.css
@@ -3,8 +3,11 @@
 }
 
 body {
-  margin:0;
-  overflow:hidden;
+  margin: 0;
+  overflow: hidden;
+  font-family: sans-serif;
+  color: #eee;
+  background-color: #222;
 }
 
 #wrapper {
@@ -37,8 +40,9 @@ body {
 }
 
 #settings, #settings-toggle {
-  background-color: rgba(255, 255, 255, 0.9);
-  border: 2px solid rgba(0, 0, 0, 0.5);
+  color: #ddd;
+  background-color: rgba(0, 0, 0, 0.8);
+  border: 2px solid #ccc;
   border-radius: .4em;
   z-index: 5000;
   padding: 0.5em;
