--- a/friction/templates/viewer.html
+++ b/friction/templates/viewer.html
@@ -56,7 +56,10 @@
       <!-- end photoswipe boilierplate -->
     </div>
 
-    <a id="settings-toggle">toggle settings</a>
+    <a id="settings-toggle" class="just-loaded">
+      <span id="show-text">show settings (o)</span>
+      <span id="hide-text">hide settings</span>
+    </a>
     <form id="settings">
       <p>
         <label for="filter">filter</label>
