--- a/friction/templates/viewer.html
+++ b/friction/templates/viewer.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/static/friction.css"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
     <script src="/static/lib/photoswipe/photoswipe.js"></script>
     <script src="/static/lib/photoswipe/photoswipe-ui-default.js"></script>
