allow people to run in rtl
this makes the counter work backwards, but fixing that would be an even
worse hack, so,,

--- a/friction/templates/viewer.html
+++ b/friction/templates/viewer.html
@@ -77,6 +77,11 @@
       </p>
 
       <p>
+        <input id="rtl" type="checkbox" name="rtl" {% if rtl %}checked{% endif %}/>
+        <label for="rtl">right-to-left</label>
+      </p>
+
+      <p>
         <input id="submit" type="submit" value="okay"/>
       </p>
     </form>
