--- a/friction/static/friction.css
+++ b/friction/static/friction.css
@@ -60,11 +60,13 @@ body {
 
 #settings {
   opacity: 0;
+  pointer-events: none;
   bottom: 3em;
 }
 
 .settings-shown #settings {
   opacity: 1;
+  pointer-events: auto;
 }
 
 p {
